Make default prism highlight more bootstrap friendly

--- a/resource/style.css
+++ b/resource/style.css
@@ -8,10 +8,7 @@ https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javasc
 
 code[class*="language-"],
 pre[class*="language-"] {
-	color: black;
-	background: none;
-	text-shadow: 0 1px white;
-	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
+    font-family: var( --font-family-monospace, Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace);
 	text-align: left;
 	white-space: pre;
 	word-spacing: normal;
@@ -53,7 +50,8 @@ pre[class*="language-"] {
 	overflow: auto;
 }
 
-:not(pre) > code[class*="language-"],
+
+/* :not(pre) > code[class*="language-"],*/
 pre[class*="language-"] {
 	background: #f5f2f0;
 }
