--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,15 @@
-/* PrismJS 1.15.0
-https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript */
 /**
- * prism.js default theme for JavaScript, CSS and HTML
- * Based on dabblet (http://dabblet.com)
- * @author Lea Verou
+ * Use css variables in themes with a fallback to the prism.js default theme 
+ * Based on https://github.com/PrismJS/prism/issues/2603
+ * @author Richard Werkman 
  */
 
 code[class*="language-"],
 pre[class*="language-"] {
-    font-family: var( --bs-font-monospace, Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace);
+	color: var(--prism-maintext, #ccc);
+	background: none;
+	font-family: var( --bs-font-monospace, Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace);
+	font-size: 1em;
 	text-align: left;
 	white-space: pre;
 	word-spacing: normal;
@@ -24,25 +25,6 @@ pre[class*="language-"] {
 	hyphens: none;
 }
 
-pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,
-code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {
-	text-shadow: none;
-	background: #b3d4fc;
-}
-
-pre[class*="language-"]::selection, pre[class*="language-"] ::selection,
-code[class*="language-"]::selection, code[class*="language-"] ::selection {
-	text-shadow: none;
-	background: #b3d4fc;
-}
-
-@media print {
-	code[class*="language-"],
-	pre[class*="language-"] {
-		text-shadow: none;
-	}
-}
-
 /* Code blocks */
 pre[class*="language-"] {
 	padding: 1em;
@@ -50,10 +32,9 @@ pre[class*="language-"] {
 	overflow: auto;
 }
 
-
-/* :not(pre) > code[class*="language-"],*/
+:not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-	background: #f5f2f0;
+	background: var(--prism-background, #2d2d2d);
 }
 
 /* Inline code */
@@ -64,63 +45,61 @@ pre[class*="language-"] {
 }
 
 .token.comment,
+.token.block-comment,
 .token.prolog,
 .token.doctype,
 .token.cdata {
-	color: slategray;
+	color: var(--prism-text, #999);
 }
 
 .token.punctuation {
-	color: #999;
+	color: var(--prism-punctuation, #ccc);
 }
 
-.namespace {
-	opacity: .7;
+.token.tag,
+.token.attr-name,
+.token.namespace,
+.token.deleted {
+	color: var(--prism-names, #e2777a);
+}
+
+.token.function-name {
+	color: var(--prism-punctuation, #6196cc);
+}
+
+.token.boolean,
+.token.number,
+.token.function {
+	color: var(--prism-functions, #f08d49);
 }
 
 .token.property,
-.token.tag,
-.token.boolean,
-.token.number,
+.token.class-name,
 .token.constant,
-.token.symbol,
-.token.deleted {
-	color: #905;
+.token.symbol {
+	color: var(--prism-symbol, #f8c555);
 }
 
 .token.selector,
-.token.attr-name,
+.token.important,
+.token.atrule,
+.token.keyword,
+.token.builtin {
+	color: var(--prism-keywords, #cc99cd);
+}
+
 .token.string,
 .token.char,
-.token.builtin,
-.token.inserted {
-	color: #690;
+.token.attr-value,
+.token.regex,
+.token.variable {
+	color: var(--prism-strings, #7ec699);
 }
 
 .token.operator,
 .token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string {
-	color: #9a6e3a;
-	background: hsla(0, 0%, 100%, .5);
-}
-
-.token.atrule,
-.token.attr-value,
-.token.keyword {
-	color: #07a;
-}
-
-.token.function,
-.token.class-name {
-	color: #DD4A68;
-}
-
-.token.regex,
-.token.important,
-.token.variable {
-	color: #e90;
+.token.url {
+	color: var(--prism-url, #67cdcc);
 }
 
 .token.important,
@@ -133,4 +112,8 @@ pre[class*="language-"] {
 
 .token.entity {
 	cursor: help;
+}
+
+.token.inserted {
+	color: var(--inserted, green);
 }
