--- a/css/solarized-theme.css
+++ b/css/solarized-theme.css
@@ -37,9 +37,9 @@ green     #859900
     --prism-functions: #b58900;
     --prism-strings:  #2aa198;
     --prism-namespace:  #2aa198;
-    --prism-names: #2aa198;
+    --prism-names: #268bd2;
     --prism-symbol: #268bd2;
-    --prism-url: #2aa198;
+    --prism-url: #6c71c4;
   }
 }
 
@@ -53,8 +53,8 @@ green     #859900
     --prism-functions: #b58900;
     --prism-strings:  #2aa198;
     --prism-namespace:  #2aa198;
-    --prism-names: #2aa198;
+    --prism-names: #268bd2;
     --prism-symbol: #268bd2;
-    --prism-url: #2aa198;
+    --prism-url: #6c71c4;
   }
 }
