--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ pre[class*="language-"] {
 	overflow: auto;
 }
 
-:not(pre) > code[class*="language-"],
+/* :not(pre) > code[class*="language-"],*/
 pre[class*="language-"] {
 	background: var(--prism-background, #2d2d2d);
 }
