--- a/css/default-theme.css
+++ b/css/default-theme.css
@@ -4,6 +4,35 @@
  * @author Lea Verou
  */
 
+
+:root {
+  --prism-maintext: black;
+  --prism-background: #f5f2f0;
+  --prism-text: #999;
+  --prism-keywords: #07a;
+  --prism-punctuation: #999;
+  --prism-functions: #f08d49;
+  --prism-strings:  #690;
+  --prism-namespace:  #e2777a;
+  --prism-names: #6196cc;
+  --prism-symbol: #DD4A68;
+  --prism-url: #67cdcc;
+}
+
+[data-theme="dark"] {
+  --prism-maintext: #ccc;
+  --prism-background: #2d2d2d;
+  --prism-text: #999;
+  --prism-keywords: #cc99cd;
+  --prism-punctuation: #ccc;
+  --prism-functions: #f08d49;
+  --prism-strings:  #7ec699;
+  --prism-namespace:  #e2777a;
+  --prism-names: #6196cc;
+  --prism-symbol: #f8c555;
+  --prism-url: #9a6e3a;
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --prism-maintext: #ccc;
@@ -18,10 +47,8 @@
     --prism-symbol: #f8c555;
     --prism-url: #9a6e3a;
   }
-}
 
-@media (prefers-color-scheme: light) {
-  :root {
+  [data-theme="light"] {
     --prism-maintext: black;
     --prism-background: #f5f2f0;
     --prism-text: #999;
