--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,47 @@ pre[class*="language-"] {
 	white-space: normal;
 }
 
+pre[class*="language-"].line-numbers {
+	position: relative;
+	padding-left: 3.8em;
+	counter-reset: linenumber;
+}
+
+
+pre[class*="language-"].line-numbers > code {
+	position: relative;
+	white-space: inherit;
+}
+
+.line-numbers .line-numbers-rows {
+	position: absolute;
+	pointer-events: none;
+	font-size: 100%;
+	left: -3em;
+	width: 2em; /* works for line-numbers below 1000 lines */
+	letter-spacing: -1px;
+	border-right: 1px solid;
+	border-right-color: var(--prism-text, #999);
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+
+}
+
+span.line-numbers-rows{
+	display: inline;
+	counter-increment: linenumber;
+}
+
+span.line-numbers-rows:before {
+	content: counter(linenumber);
+	color: var(--prism-text, #999);
+	display: inline;
+	padding-right: 0.8em;
+	text-align: right;
+}
+
 .token.comment,
 .token.block-comment,
 .token.prolog,
