--- a/css/bootstrap-theme.css
+++ b/css/bootstrap-theme.css
@@ -1,7 +1,7 @@
 :root {
-  --prism-maintext: var(--bs-gray-500, #000);
+  --prism-maintext: var(--bs-secondary-text-emphasis, #000);
   --prism-background: var(--bs-secondary-bg-subtle, #f5f2f0);
-  --prism-text: var(--bs-gray, #999);
+  --prism-text: var(--bs-secondary-text, #999);
   --prism-keywords: var(--bs-teal, #07a);
   --prism-punctuation: var(--bs-gray, #999);
   --prism-functions: var(--bs-orange, #f08d49);
@@ -12,7 +12,4 @@
   --prism-url: var(--bs-cyan, #67cdcc);
 }
 
-[data-bs-theme="dark"] {
-  --prism-maintext: var(--bs-body-color, #000);
-}
 
